Bug 495635 - Dragging window off bottom of screen makes it inaccessible
Summary: Dragging window off bottom of screen makes it inaccessible
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 6.2.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2024-10-31 12:21 UTC by post
Modified: 2026-05-27 15:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments
Example using Firefox (3.19 MB, video/mp4)
2024-10-31 12:23 UTC, post
Details
Example using Dolphin (2.26 MB, video/mp4)
2024-10-31 12:24 UTC, post
Details

Note You need to log in before you can comment on or make changes to this bug.
Description post 2024-10-31 12:21:33 UTC
SUMMARY
It's possible to drag a window off the bottom of the screen.
With Firefox, the cursor still changes into the vertical resize variant, but nothing happens when I try to drag it.
When I try the same with Dolphin, the cursor doesn't react at all.

The window also doesn't respond to snapping using meta+arrow keys.

I found this resolved bug that seems similar, but not exactly the same.
https://bugs.kde.org/show_bug.cgi?id=485337

STEPS TO REPRODUCE
(same as the above bug)
A. With firefox
1. Open a firefox window, and maximize it.
2. Push the cursor to the top of the screen.
3. Click and drag the cursor to the bottom of the screen.

B. With dolphin
1. Open a dolphin window
2. Drag it to the bottom, this will keep the title bar still visible at first
3. Grab the top of the window again, drag it all the way down

OBSERVED RESULT
The mouse can't interact with the window, and the window snapping shortcuts don't work.
It does still appear in the task switcher, so I can close it through there.

EXPECTED RESULT
At least part of the title bar should stay visible I think.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Aurora DX (Fedora immutable variant)
KDE Plasma Version: 6.2.2
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
Comment 1 post 2024-10-31 12:23:40 UTC
Created attachment 175405 [details]
Example using Firefox
Comment 2 post 2024-10-31 12:24:02 UTC
Created attachment 175406 [details]
Example using Dolphin
Comment 3 post 2024-10-31 12:27:28 UTC
Guess my laptop can't quite handle screen recording, I'll try to get a better recording when I get home.
Comment 4 Nate Graham 2024-10-31 16:51:59 UTC
I can reproduce this. When I drag a window down to the bottom, it snaps offscreen!
Comment 5 Bug Janitor Service 2026-05-27 12:53:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/9284
Comment 6 Bug Janitor Service 2026-05-27 13:24:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/9285
Comment 7 Vlad Zahorodnii 2026-05-27 13:49:59 UTC
Git commit f26ad192682315a46fb74d931bf4efcc0ce8120b by Vlad Zahorodnii.
Committed on 27/05/2026 at 13:27.
Pushed by vladz into branch 'master'.

Remove Window::checkUnrestrictedInteractiveMoveResize()

kwin used to have an infinite bruteforce loop to move a window back to
the work area. It did make perfect sense to have a guard against cases
that the confinement algorithm couldn't handle. Nowadays, that shouldn't
be the problem.

At the moment, the checkUnrestrictedInteractiveMoveResize() function can
report false positives, which can result in the user unexpectedly being
able to move some windows offscreen. We still allow the unrestricted
move resize mode, but it should only be activated by using Meta+LMB/RMB,
not when dragging the windows by titlebar, etc.

M  +0    -38   src/window.cpp
M  +0    -1    src/window.h

https://invent.kde.org/plasma/kwin/-/commit/f26ad192682315a46fb74d931bf4efcc0ce8120b
Comment 8 Vlad Zahorodnii 2026-05-27 14:31:05 UTC
Git commit bf29384b7f90b1e17dda19464a9131f498ef076c by Vlad Zahorodnii.
Committed on 27/05/2026 at 13:50.
Pushed by vladz into branch 'Plasma/6.7'.

Remove Window::checkUnrestrictedInteractiveMoveResize()

kwin used to have an infinite bruteforce loop to move a window back to
the work area. It did make perfect sense to have a guard against cases
that the confinement algorithm couldn't handle. Nowadays, that shouldn't
be the problem.

At the moment, the checkUnrestrictedInteractiveMoveResize() function can
report false positives, which can result in the user unexpectedly being
able to move some windows offscreen. We still allow the unrestricted
move resize mode, but it should only be activated by using Meta+LMB/RMB,
not when dragging the windows by titlebar, etc.


(cherry picked from commit f26ad192682315a46fb74d931bf4efcc0ce8120b)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +0    -38   src/window.cpp
M  +0    -1    src/window.h

https://invent.kde.org/plasma/kwin/-/commit/bf29384b7f90b1e17dda19464a9131f498ef076c