Remove Window::checkUnrestrictedInteractiveMoveResize()

kwin used to have an infinite bruteforce loop to move a window back to
the work area. It did make perfect sense to have a guard against cases
that the confinement algorithm couldn't handle. Nowadays, that shouldn't
be the problem.

At the moment, the checkUnrestrictedInteractiveMoveResize() function can
report false positives, which can result in the user unexpectedly being
able to move some windows offscreen. We still allow the unrestricted
move resize mode, but it should only be activated by using Meta+LMB/RMB,
not when dragging the windows by titlebar, etc.

BUG: 495635